--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://jay311311-phonestore.netlify.app/",
   "browserslist": {
     "production": [
       ">0.2%",
